Add Tailwind; Move App styles to Tailwind

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Arkham Quest</title>
+    <link rel="icon" type="image/png" href="/favicon.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
